test/configCases/validate/basic/errors.js
"use strict";

module.exports = [
	[
		/Invalid options object\. Ignore Plugin has been initialized using an options object/
	]
];
